# noFluidX3D

./: FiniteViscoplastic.py  Interactions.py  OverDamped.cl  README.md  README.rst  SecondOrderNeoHookeanAFM.py  Simulation.py  TetraCell.py  config.json  config_tip.json  cube.py  mesh_concentrated.vtk  microgelAdhesion.py  microgelAdhesionFull.py  microgelAdhesionRelaxation.py  microgelAdhesionScalingTests.py  microgelEllipsoid.py  microgelEllipsoidTMP.py  microgelHeterogeneous.py  microgelPoissonRatio.py  microgelPoroElastic.py  microgelPoroNeoHookean.py  microgelPrestress.py  microgelPrestressRelax.py  microgelReference.py  microgelReferenceLE.py  microgelSecondOrderNeoHookean.py  microgelShell.py  noFluidx3d.py  noFluidx3dSphere.py  noFluidx3dSphereIntegral.py  noFluidx3dTP.py  noFluidx3dTip.py  noFluidx3dTipIntegral.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  stressdistribution.py  velocityVerlet.cl
gmsh/: create-mesh.sh  mesh_concentrated2.geo
kernels/: InteractionLinearViscoelastic.cl  InteractionPoroNeoHookean.cl  InteractionSphereIntegral.cl  InteractionTipIntegral.cl  OverDamped.cl  velocityVerlet.cl
nofluidx3d/: Interactions.py  KernelBuilder.py  Simulation.py  SimulationLegacy.py  TetraCell.py  openCL.py  pyclParams.py
nofluidx3d/interactions/: Interaction.py  LinearElastic.py  MooneyRivlin.py  Plane.py  PlaneAFM.py  SaintVenantKirchhoff.py  Sphere.py  Substrate.py  Tetra.py  VelocityVerlet.py  __init__.py
nofluidx3d/kernels/: COMForce.cl  CalcCOM.cl  InteractionAdhesivePlane.cl  InteractionAdhesivePlaneSurfaceIntegral.cl  atomicAdd.cl  (+16 more)
(+14 files in other folders)
