[metadata]
name = nofluidx3d
author = Richard Kellnberger, Sebastian Wohlrab
description = AFM simulations similar to FluidX3D without fluid
url = https://gitlab.uni-bayreuth.de/richardk2n-projects/sebastian/nofluidx3d
long_description = file: README.rst
#license='MIT'
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
python_requires = >= 3.9
packages = find:
install_requires =
    numpy
    matplotlib
    scipy
    pyopencl
    siphash24
    pyvista

[options.package_data]
"nofluidx3d" = py.typed

[flake8]
max-complexity = 20
max-line-length = 100

#[options.entry_points]
#pylsp = pylsp_mypy = pylsp_mypy.plugin

[options.extras_require]
test =
    tox
    pytest
    pytest-cov
    coverage

[options.packages.find]
exclude =
    contrib
    docs
    test
